Rename to 'schemasafe'

--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "@exodus/is-my-json-valid",
-  "version": "2.20.0-exodus4",
-  "license": "MIT",
-  "repository": "github.com/ExodusMovement/is-my-json-valid",
+  "name": "@exodus/schemasafe",
+  "version": "1.0.0-alpha1",
+  "description": "JSON Safe Parser & Schema Validator",
   "main": "src/index.js",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ExodusMovement/schemasafe.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ExodusMovement/schemasafe/issues"
+  },
+  "homepage": "https://github.com/ExodusMovement/schemasafe",
   "files": [
     "src/generate-function.js",
     "src/safe-format.js",
@@ -38,9 +46,13 @@
     "tape": "^4.7.0"
   },
   "keywords": [
-    "json",
+    "JSON",
     "schema",
-    "orderly",
-    "jsonschema"
+    "validator",
+    "validation",
+    "jsonschema",
+    "json-schema",
+    "json-schema-validator",
+    "json-schema-validation"
   ]
 }
