--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "prettier --write '**/*.js'",
     "test": "npm run test:normal | tap-spec && npm run test:module | tap-spec",
     "test:raw": "npm run test:normal && npm run test:module",
-    "test:module": "tape -r ./test-module.js test/*.js test/regressions/*.js",
+    "test:module": "tape -r ./test/tools/test-module.js test/*.js test/regressions/*.js",
     "test:normal": "tape test/*.js test/regressions/*.js"
   },
   "dependencies": {
