--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   "scripts": {
     "lint": "prettier --list-different '**/*.js'&& eslint .",
     "format": "prettier --write '**/*.js'",
+    "coverage": "c8 --reporter=lcov --reporter=text npm run test",
     "test": "npm run test:normal | tap-spec && npm run test:module | tap-spec",
     "test:raw": "npm run test:normal && npm run test:module",
     "test:module": "tape -r ./test/tools/test-module.js test/*.js test/regressions/*.js",
     "test:normal": "tape test/*.js test/regressions/*.js"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "c8": "^7.2.0",
     "eslint": "^5.7.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^12.0.0",
