--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
     "strict": 2,
     "no-else-return": 2,
     "no-fallthrough": 2,
+    "no-prototype-builtins": 2,
     "no-param-reassign": 2,
     "no-shadow": 2,
     "prefer-const": 2,
