Post-process JSON.stringify to escape u2028 and u2029
In pre-ES2019, those are not suitable for inserting in JS context.

This should affect Node.js 8 and below.

Refs: https://v8.dev/features/subsume-json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
     "no-restricted-syntax": [
       2,
       {
-        "selector": "MemberExpression[property.name='toString']",
+        "selector": "CallExpression[callee.property.name='toString']:not(:matches([arguments.0]))",
         "message": "Use template literals instead of .toString()"
       },
       {
