Test coverage on CI and upload to Codecov
No access token needed for public repos.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,9 @@ jobs:
         run: |
           yarn --frozen-lockfile
           yarn lint
-          yarn test
+          yarn run ci
         env:
           CI: true
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./coverage/lcov.info
