--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "prettier --list-different '**/*.js'&& eslint .",
     "format": "prettier --write '**/*.js'",
     "coverage": "c8 --reporter=lcov --reporter=text npm run test",
-    "ci": "c8 --reporter=lcovonly npm run test",
+    "coverage:lcov": "c8 --reporter=lcovonly npm run test",
     "test": "npm run test:normal | tap-spec && npm run test:module | tap-spec",
     "test:raw": "npm run test:normal && npm run test:module",
     "test:module": "tape -r ./test/tools/test-module.js test/*.js test/regressions/*.js",
