Move compile() from index.js into compile.js

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/ExodusMovement/schemasafe",
   "files": [
+    "src/compile.js",
     "src/formats.js",
     "src/generate-function.js",
     "src/index.js",
