--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exodus/schemasafe",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0-beta.1",
   "description": "JSON Safe Parser & Schema Validator",
   "license": "MIT",
   "main": "src/index.js",
