Extract types.js into a separate file

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "src/known-keywords.js",
     "src/pointer.js",
     "src/safe-format.js",
-    "src/scope-functions.js"
+    "src/scope-functions.js",
+    "src/types.js"
   ],
   "scripts": {
     "lint": "prettier --list-different '**/*.js'&& eslint .",
