Move scope utils to a separate file
Also ensure no matching loop variables, even in different functions.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "src/pointer.js",
     "src/safe-format.js",
     "src/scope-functions.js",
+    "src/scope-utils.js",
     "src/tracing.js",
     "src/types.js"
   ],
