lint: enable stricter version of no-unused-vars

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
     "no-proto": 2,
     "no-prototype-builtins": 2,
     "no-shadow": 2,
+    "no-unused-vars": [2, { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
     "prefer-const": 2,
     "prefer-object-spread": 2,
     "prefer-template": 2,
