--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "format": "prettier --write '**/*.js'",
     "coverage": "c8 --reporter=lcov --reporter=text npm run test",
     "coverage:lcov": "c8 --reporter=lcovonly npm run test",
-    "test": "npm run test:normal | tap-spec && npm run test:module | tap-spec",
-    "test:raw": "npm run test:normal && npm run test:module",
+    "test": "npm run test:raw | tap-spec",
+    "test:raw": "SCHEMASAFE_DEV=1 npm run test:normal && npm run test:module",
     "test:module": "tape -r ./test/tools/test-module.js test/*.js test/regressions/*.js",
     "test:normal": "tape test/*.js test/regressions/*.js"
   },
