--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/ExodusMovement/schemasafe",
   "files": [
+    "index.d.ts",
     "src/compile.js",
     "src/formats.js",
     "src/generate-function.js",
