doc: add schema spec keywords

--- a/package.json
+++ b/package.json
@@ -60,6 +60,12 @@
     "schema",
     "validator",
     "validation",
+    "JSON Schema",
+    "draft-04",
+    "draft-06",
+    "draft-07",
+    "draft 2019-09",
+    "draft 2020-12",
     "jsonschema",
     "json-schema",
     "json-schema-validator",
