chore: bump dev deps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,7 @@
   "extends": [
     "eslint:recommended",
     "standard",
-    "prettier",
-    "prettier/standard"
+    "prettier"
   ],
   "rules": {
     "no-restricted-syntax": [
