--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 16.x]
+        # 10.x for baseline + supported branches per https://github.com/nodejs/release
+        node-version: [10.x, 14.x, 16.x, 18.x]
 
     steps:
       - uses: actions/checkout@v2
