--- a/package.json
+++ b/package.json
@@ -37,11 +37,16 @@
     "test:raw": "npm run test:normal && npm run test:module",
     "test:module": "tape -r ./test/tools/test-module.js test/*.js test/regressions/*.js",
     "test:normal": "tape test/*.js test/regressions/*.js",
+    "release": "semantic-release",
+    "test:normal": "tape test/*.js test/regressions/*.js",
     "test:types": "yarn --cwd test/types test"
   },
   "dependencies": {},
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "c8": "^7.9.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^16.0.3",
@@ -50,6 +55,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "prettier": "~1.14.3",
     "safe-regex": "^1.1.0",
+    "semantic-release": "^21.1.1",
     "tap-spec": "^5.0.0",
     "tape": "^5.3.1"
   },
