fix: downgrade preset and remove test branch

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,8 +1,5 @@
 {
-  "branches": [
-    "master",
-    "sparten11740/ci/automatic-releases"
-  ],
+  "branches": ["master"],
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
