ci: configure release assets

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,6 +10,11 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/npm",
-    "@semantic-release/git"
+    [
+      "@semantic-release/git",
+      {
+        "assets": ["CHANGELOG.md", "package.json", "yarn.lock"]
+      }
+    ]
   ]
 }
