--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,6 @@ jobs:
         run: yarn --frozen-lockfile
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_AUTOMATION_PAT }}
           NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
         run: yarn semantic-release
