chore: update test scripts

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "coverage": "c8 --reporter=lcov --reporter=text npm run test",
     "coverage:lcov": "c8 --reporter=lcovonly npm run test",
     "test:only:json-schema-testsuite": "tape test/json-schema.js | tap-spec",
-    "test": "npm run test:raw | tap-spec",
-    "test:raw": "npm run test:normal && npm run test:module",
+    "test": "yarn test:raw | tap-spec",
+    "test:raw": "yarn test:normal && yarn test:module",
     "test:module": "tape -r ./test/tools/test-module.js test/*.js test/regressions/*.js",
     "test:normal": "tape test/*.js test/regressions/*.js",
     "release": "semantic-release",
