fix: release notes preset

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,7 +7,12 @@
         "preset": "conventionalcommits"
       }
     ],
-    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "conventionalcommits"
+      }
+    ],
     "@semantic-release/changelog",
     "@semantic-release/npm",
     [
