ci: use @semantic-release/github instead of git

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -15,11 +15,6 @@
     ],
     "@semantic-release/changelog",
     "@semantic-release/npm",
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["CHANGELOG.md", "package.json", "yarn.lock"]
-      }
-    ]
+    "@semantic-release/github"
   ]
 }
