--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "dependencies": {},
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.3",
     "c8": "^7.9.0",
     "conventional-changelog-conventionalcommits": "^6.0.0",
     "eslint": "^7.32.0",
