fix: relax type on object properties (#180)
* fix: loosen types

* eol

* chore: add node types

* chore: simplify script

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test": "npm run test:raw | tap-spec",
     "test:raw": "npm run test:normal && npm run test:module",
     "test:module": "tape -r ./test/tools/test-module.js test/*.js test/regressions/*.js",
-    "test:normal": "tape test/*.js test/regressions/*.js"
+    "test:normal": "tape test/*.js test/regressions/*.js",
+    "test:types": "yarn --cwd test/types test"
   },
   "dependencies": {},
   "devDependencies": {
